--- a/skel/share/defaults/gplazma.properties
+++ b/skel/share/defaults/gplazma.properties
@@ -266,6 +266,77 @@ gplazma.ldap.organization = o=SITE,c=CONTRY
 gplazma.ldap.tree.people = People
 gplazma.ldap.tree.groups = Groups
 
+
+# ---- HomeDir plugin
+#
+#  The homedir plugin provides support for checking that a user's home
+#  directory exists.  It also offers support for choosing the location
+#  of a user's home directory, if not already specified.
+#  Independently, it checks the validity of the home directory and, if
+#  missing, can create it.
+#
+
+#
+#  The gplazma.homedir.choose-if-undefined.enabled property controls
+#  whether the plugin will choose the user's home directory.
+#
+#  If a plugin earlier in the Session chain has already identified the
+#  user's home directory then that path is used and this property has
+#  no effect.
+#
+#  If the user's home directory hasn't been specified then the homedir
+#  plugin will take one of two actions, based on the value of the
+#  gplazma.homedir.choose-if-undefined.enabled property:
+#
+#     o  If 'false' then the plugin will fail.
+#
+#     o  If 'true' then the plugin will choose the user's home
+#        directory based on the user's username.  If the user has no
+#        username and then the plugin will fail.
+#
+(one-of?true|false)gplazma.homedir.choose-if-undefined.enabled = false
+
+#
+#  The homedir plugin chooses the user's home directory by appending
+#  the username to the fixed path specified by the
+#  gplazma.homedir.choose-if-undefined.path property.  This means that
+#  the user's home directory will be a directory with the same name as
+#  the user's username and a subdirectory of directory specified by
+#  this property.
+#
+gplazma.homedir.choose-if-undefined.path = /home
+
+#
+#  The plugin will check whether the user's home directory exists, is
+#  owned by this user's uid and is a directory.  If the home directory
+#  exists in the namespace but is not owned by the user's uid or is
+#  not a directory then the plugin will fail.
+#
+#  If the home directory directory does not exist then the plugin may
+#  do one of two things, based on the value of the
+#  gplazma.homedir.create-if-absent.enabled property:
+#
+#     o  If 'false' then the plugin will fail.
+#
+#     o  If 'true' then the plugin will attempt to create a directory
+#        that is owned by the user's uid and group-owned by the user's
+#        primary gid.
+#
+#        If the home directory's parent directory does not already
+#        exist then the plugin will fail.
+#
+(one-of?true|false)gplazma.homedir.create-if-absent.enabled = false
+
+#
+#  The following property controls with which permissions the user's
+#  home directory will be created.  Note that this property's value is
+#  an integer value in base 8.  The semantics are the same as for the
+#  Unix 'chmod' command.
+#
+gplazma.homedir.create-if-absent.permissions = 755
+
+
+
 #  -----------------------------------------------------------------------
 #         Obsolete properties.
 #  -----------------------------------------------------------------------
