gplazma-ldap: make DN search string configurable
added a new property to specify DN search criteria:

gplazma.ldap.userfilter

The default value is 'uid', which is used in posix
schema.

This is a very lite filter version. Can be changed if needed.

Acked-by: Paul Millar
Target: master,2.6
Require-book: yes
Require-notes: yes
Patch: http://rb.dcache.org/r/5922/

--- a/skel/share/defaults/gplazma.properties
+++ b/skel/share/defaults/gplazma.properties
@@ -207,6 +207,16 @@ gplazma.ldap.port = 389
 gplazma.ldap.organization = o=SITE,c=CONTRY
 gplazma.ldap.tree.people = People
 gplazma.ldap.tree.groups = Groups
+#
+# The search filter to use to locate a user's entry in the LDAP directory.
+# It must contain the special token "%s" which will be replaced with the
+# supplied username value before the name is used
+#
+# Some examples:
+#    "(uid=%s)"
+#    "(&(uid=%s)(objectClass=inetOrgPerson))"
+#
+gplazma.ldap.userfilter = (uid = %s)
 
 # ---- BanFile plugin
 #
