Allow full access to system-test via dcap protocol

--- a/packages/system-test/src/main/skel/etc/layouts/system-test.conf
+++ b/packages/system-test/src/main/skel/etc/layouts/system-test.conf
@@ -87,6 +87,7 @@ spacemanager.authz.link-group-file-name=${dcache.paths.etc}/linkgroup.conf
 
 [dCacheDomain/dcap]
 dcap.authn.protocol=plain
+dcap.authz.anonymous-operations=FULL
 
 [dCacheDomain/dcap]
 dcap.authn.protocol=auth
